--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>cn.fyg.web</groupId>
   <version>1.0</version>
-  <artifactId>ct</artifactId>
+  <artifactId>pm</artifactId>
   <packaging>war</packaging>
-  <name>ct</name>
+  <name>pm</name>
   
- <properties>
+	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jetty.version>6.1.4</jetty.version>
 		<spring.version>3.1.0.RELEASE</spring.version>
@@ -311,7 +311,7 @@
 	</repositories>
 
 	<build>
-		<finalName>ct</finalName>
+		<finalName>pm</finalName>
 
 		<resources>
 			<resource>
