--- a/src/main/resources/config/db.properties
+++ b/src/main/resources/config/db.properties
@@ -1,6 +1,9 @@
-#数据库文件配置
 db.driver=${dbs.driver}
 db.url=${dbs.url}
 db.username=${dbs.username}
 db.password=${dbs.password}
 
+hibernate.dialect=${dbs.dialect}
+hibernate.hbm2ddl.auto=update
+hibernate.show_sql=${dbs.showsql}
+hibernate.format_sql=${dbs.formatsql}
