--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -4,7 +4,7 @@ log4j.rootLogger=DEBUG, Console
 #Console
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
-log4j.appender.Console.layout.ConversionPattern=%d [%t] %-5p [%c] %m%n
+log4j.appender.Console.layout.ConversionPattern=%d [%t] %-5p [%c]\n%m%n
 
 #Project defalult level
 log4j.logger.cn.fyg=DEBUG
@@ -22,7 +22,7 @@ log4j.logger.org.apache=ERROR
 log4j.logger.net.sf.ehcache=ERROR
 
 #activiti sql
-#log4j.logger.java.sql=ERROR
+log4j.logger.java.sql=ERROR
 
 #activiti 
-#log4j.logger.org.activiti.engine=DEBUG
+log4j.logger.org.activiti.engine=ERROR
