--- a/src/test/resources/config/db.properties
+++ b/src/test/resources/config/db.properties
@@ -1,4 +1,9 @@
-db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://127.0.0.1:3306/pm_dev
-db.username=root
-db.password=0
+db.driver=org.h2.Driver
+db.url=jdbc:h2:mem:activiti;DB_CLOSE_DELAY=-1
+db.username=sa
+db.password=
+
+hibernate.dialect=org.hibernate.dialect.H2Dialect
+hibernate.hbm2ddl.auto=create
+hibernate.show_sql=true
+hibernate.format_sql=true
