项目功能完成

--- a/src/main/resources/config/db.properties
+++ b/src/main/resources/config/db.properties
@@ -6,4 +6,4 @@ db.password=${dbs.password}
 hibernate.dialect=${dbs.dialect}
 hibernate.hbm2ddl.auto=update
 hibernate.show_sql=${dbs.showsql}
-hibernate.format_sql=${dbs.formatsql}
+hibernate.format_sql=${dbs.showsql}
