整合mybatis和jpa同时使用，多数据源的事务还存在问题

--- a/src/main/resources/config/db.properties
+++ b/src/main/resources/config/db.properties
@@ -1,9 +1,15 @@
-db.driver=${dbs.driver}
-db.url=${dbs.url}
-db.username=${dbs.username}
-db.password=${dbs.password}
+db.driver=com.mysql.jdbc.Driver
+db.url=jdbc:mysql://localhost:3306/pm_demo
+db.username=root
+db.password=0
 
-hibernate.dialect=${dbs.dialect}
+
+db2.driver=com.mysql.jdbc.Driver
+db2.url=jdbc:mysql://localhost:3306/pm_demo2
+db2.username=root
+db2.password=0
+
+hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.hbm2ddl.auto=update
-hibernate.show_sql=${dbs.showsql}
-hibernate.format_sql=${dbs.showsql}
+hibernate.show_sql=true
+hibernate.format_sql=true
