--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 		<slf4j.version>1.5.10</slf4j.version>
 		<java.version>1.6</java.version>
 		<junit.version>4.8.2</junit.version>
+		<mybatis.version>3.1.1</mybatis.version>
 	</properties>
 	
 	<!-- database configuration -->
@@ -54,6 +55,25 @@
 
 
 	<dependencies>
+		
+		<!-- mybatis  -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>${mybatis.version}</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		
+		<!-- mybatis-spring 整合  -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-spring</artifactId>
+			<version>1.1.1</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		
 		<!-- Bean Validation Dependencies -->
 
 		<dependency>
