--- a/src/test/resources/config/db.properties
+++ b/src/test/resources/config/db.properties
@@ -1,9 +1,15 @@
-db.driver=org.h2.Driver
-db.url=jdbc:h2:mem:activiti;DB_CLOSE_DELAY=-1
-db.username=sa
-db.password=
+db.driver=com.mysql.jdbc.Driver
+db.url=jdbc:mysql://localhost:3306/pm_demo
+db.username=root
+db.password=0
 
-hibernate.dialect=org.hibernate.dialect.H2Dialect
-hibernate.hbm2ddl.auto=create
+
+db2.driver=com.mysql.jdbc.Driver
+db2.url=jdbc:mysql://localhost:3306/pm_demo2
+db2.username=root
+db2.password=0
+
+hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+hibernate.hbm2ddl.auto=update
 hibernate.show_sql=true
 hibernate.format_sql=true
