配置aitiviti相关文件

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 		<slf4j.version>1.5.10</slf4j.version>
 		<java.version>1.6</java.version>
 		<junit.version>4.8.2</junit.version>
+		<activi.version>5.12.1</activi.version>
 	</properties>
 	
 	<!-- database configuration -->
@@ -54,8 +55,20 @@
 
 
 	<dependencies>
+		<!-- activi 整合 -->
+		<dependency>
+			<groupId>org.activiti</groupId>
+			<artifactId>activiti-engine</artifactId>
+			<version>${activi.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.activiti</groupId>
+			<artifactId>activiti-spring</artifactId>
+			<version>${activi.version}</version>
+			<scope>compile</scope>
+		</dependency>
+	
 		<!-- Bean Validation Dependencies -->
-
 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
@@ -325,6 +338,13 @@
 
 
 	<repositories>
+	 <!-- activiti repository -->
+		 <repository>
+	        <id>activiti</id>
+	        <name>Activiti Repository</name>
+	        <url>http://maven.alfresco.com/nexus/content/repositories/activiti/</url>
+	    </repository>
+	    
 		<!-- JBoss Repository used for Java EE 6 pieces -->
 		<repository>
 			<id>repository.jboss.org</id>
