--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
 
 
 	<dependencies>
+		<!-- Jackson JSON Mapper 使用spring返回json对象 -->
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.7.1</version>
+		</dependency>
+	
 		<!-- activi 整合 -->
 		<dependency>
 			<groupId>org.activiti</groupId>
@@ -125,6 +132,12 @@
 					<artifactId>commons-logging</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring.version}</version>
 		</dependency>
 
 		<dependency>
