--- a/pom.xml
+++ b/pom.xml
@@ -346,6 +346,13 @@
 			<scope>compile</scope>
 		</dependency>
 	
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.0</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 
