--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 		<slf4j.version>1.5.10</slf4j.version>
 		<java.version>1.6</java.version>
 		<junit.version>4.8.2</junit.version>
-		<activi.version>5.12.1</activi.version>
+		<activi.version>5.12.1-kft</activi.version>
 	</properties>
 	
 	<!-- database configuration -->
@@ -365,7 +365,14 @@
 
 
 	<repositories>
-	 <!-- activiti repository -->
+		
+		<!-- 咖啡兔版本 -->
+		<repository>
+			<id>kafeitu</id>
+            <url>http://maven.kafeitu.me/nexus/content/groups/public</url>
+		</repository>
+		
+		 <!-- activiti repository -->
 		 <repository>
 	        <id>activiti</id>
 	        <name>Activiti Repository</name>
