编号同步完成版本

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -11,8 +11,8 @@ log4j.logger.cn.fyg=DEBUG
 
 #spring default level
 log4j.logger.org.springframework=INFO
-log4j.logger.org.springframework.transaction.interceptor.TransactionInterceptor = DEBUG
-log4j.logger.org.hibernate.transaction = DEBUG
+#log4j.logger.org.springframework.transaction.interceptor.TransactionInterceptor = DEBUG
+#log4j.logger.org.hibernate.transaction = DEBUG
 
 #hibernate default level
 log4j.logger.org.hibernate=ERROR
