--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 			<id>dev</id>
 			<properties>
 				<dbs.driver>com.mysql.jdbc.Driver</dbs.driver>
-				<dbs.url>jdbc:mysql://localhost:3306/pm_dev</dbs.url>
+				<dbs.url>jdbc:mysql://localhost:3306/pm_test</dbs.url>
 				<dbs.dialect>org.hibernate.dialect.MySQL5Dialect</dbs.dialect>
 				<dbs.username>root</dbs.username>
 				<dbs.password>0</dbs.password>
