--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,8 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-		 	classpath:applicationContext.xml
+		 	classpath:applicationContext.xml,
+		 	/WEB-INF/spring-shiro.xml
 		</param-value>
 	</context-param>  
 
@@ -45,5 +46,15 @@
 		<servlet-name>appServlet</servlet-name>
 	</filter-mapping>  
 	
+		<!-- Shiro配置 -->
+	<filter>
+		<filter-name>shiroFilter</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	
+	<filter-mapping>
+		<filter-name>shiroFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 	
 </web-app>
