--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -7,7 +7,7 @@ log4j.appender.Console.layout=org.apache.log4j.PatternLayout
 log4j.appender.Console.layout.ConversionPattern=%d [%t] %-5p [%c] %m%n
 
 #Project defalult level
-log4j.logger.cn.fyg=DEBUG
+log4j.logger.cn.fyg.pm=DEBUG
 
 #spring default level
 log4j.logger.org.springframework=INFO
